Add null checks for queryFields and highlightedFields, and ensure filterQuery is not null before creating a list